penambahan marketplace dan tentang kami

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,13 @@
 @import "based.css";
 
 :root{
-  --primary-font-family: 'Great Vibes', cursive;
-  --secondary-font-family: 'Charm', cursive;
-  --tertiary-font-family: 'Open Sans', sans-serif;
+  --primary-font-family: 'Poppins', sans-serif;;
+  
 
-  --primary-color: #EE7828;
+  --primary-color: #FF9F0D;
   --secondary-color: #2C2C2C;
-  --tertiary-color: #806D61;
-  --quaternary-color: #C5BAAA;
+}
+
+#app {
+  background-color: #f5f5f5;
 }
